--- a/Header.css
+++ b/Header.css
@@ -15,7 +15,7 @@
     font-size: 18px;
     line-height: 35px;
     border-radius: 4px;
-    font-style: Arial;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header a.logo
