--- a/Header.css
+++ b/Header.css
@@ -1,4 +1,4 @@
-.header 
+/* .header 
 {
    overflow: hidden;
    background-color: blue;
@@ -53,3 +53,9 @@
     }
 }
     
+ */
+
+.rfloat 
+{
+    float: right !important;
+}
