--- a/Header.css
+++ b/Header.css
@@ -1,4 +1,4 @@
-/* .header 
+ .header 
 {
    overflow: hidden;
    background-color: blue;
@@ -53,7 +53,7 @@
     }
 }
     
- */
+ 
 
 .rfloat 
 {
