--- a/Header.css
+++ b/Header.css
@@ -1,11 +1,11 @@
-/* .header 
+.navbar-brand 
 {
    overflow: hidden;
    background-color: blue;
    padding: 20px 10px;
 }
 
-.header a
+.navbar-nav a
 {
     float: left;
     color: white;
@@ -18,42 +18,40 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.header a.logo
+.navbar-nav a.navbar-brand 
 {
     font-size: 35px;
     font-weight: bold;
 }
 
-.header a:hover 
+.navbar-nav a:hover 
 {
     background-color: #ddd;
     color: black;
 }
 
-.header a.active
+.navbar-nav a.btn 
 {
     background-color: black;
     color: white;
 }
 
-.sections
+.navbar-sec
 {
     float: right;
 }
 
 @media screen and (max-width:500px) {
-    .header a{
+    .navbar-brand a{
         float: none;
         display: block;
         text-align: left;
     }
-    .sections {
+    .navbar-sec {
         float: none;
 
     }
 }
-    
- */
 
 .rfloat 
 {
