--- a/Header.css
+++ b/Header.css
@@ -1,4 +1,4 @@
-.navbar-brand 
+.navbar-nav 
 {
    overflow: hidden;
    background-color: blue;
@@ -18,7 +18,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.navbar-nav a.navbar-brand 
+.navbar-nav a.navbar-brand mr-auto
 {
     font-size: 35px;
     font-weight: bold;
@@ -30,30 +30,26 @@
     color: black;
 }
 
-.navbar-nav a.btn 
+.navbar-nav a.btn btn-outline-dark navbar-btn
 {
     background-color: black;
     color: white;
 }
 
-.navbar-sec
+.navbar-brand ml-auto
 {
     float: right;
 }
 
 @media screen and (max-width:500px) {
-    .navbar-brand a{
+    .navbar-nav a{
         float: none;
         display: block;
         text-align: left;
     }
-    .navbar-sec {
+    .navbar-brand ml-auto {
         float: none;
 
     }
 }
 
-.rfloat 
-{
-    float: right !important;
-}
