--- a/Homeheader.css
+++ b/Homeheader.css
@@ -1,11 +1,11 @@
-.navbar-nav 
+.navbar
 {
    overflow: hidden;
    background-color: blue;
    padding: 20px 10px;
 }
 
-.navbar-nav a
+.navbar a
 {
     float: left;
     color: white;
@@ -18,25 +18,25 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.navbar-nav a.navbar-brand 
+.navbar a.navbar-logo 
 {
     font-size: 35px;
     font-weight: bold;
 }
 
-.navbar-nav a:hover 
+.navbar a:hover 
 {
     background-color: #ddd;
     color: black;
 }
 
-.navbar-nav a.btn 
+.navbar a.Home-btn
 {
     background-color: black;
     color: white;
 }
 
-.navbar-brand 
+.navbar-btn 
 {
     float: right;
 }
@@ -47,7 +47,7 @@
         display: block;
         text-align: left;
     }
-    .navbar-brand{
+    .navbar-btn{
         float: none;
 
     }
