--- a/HomePage.css
+++ b/HomePage.css
@@ -2,7 +2,8 @@
     overflow: hidden;
     background-color: #0082e6;
     padding:20px 10px;
-    background-size: cover;
+    font-family: Arial, Helvetica, sans-serif;
+    display: block;
 }
 
 .navbar a {
