--- a/HomePage.css
+++ b/HomePage.css
@@ -3,7 +3,6 @@
     background-color: #0082e6;
     padding:20px 10px;
     font-family: Arial, Helvetica, sans-serif;
-    display: block;
 }
 
 .navbar a {
@@ -46,4 +45,9 @@
         float: none;
     }
 }
-    
+ 
+body{
+    background: url(Working.jpg) no-repeat;
+    background-size: cover;
+    height: calc(100vh - 80px);
+}
