--- a/HomePage.css
+++ b/HomePage.css
@@ -48,7 +48,7 @@
 }
  
 body{
-    background: url(Working.jpg) no-repeat;
+    background: url(https://calbizjournal.com/wp-content/uploads/2021/11/startup-1140x691.jpg) no-repeat;
     background-size: cover;
     height: calc(100vh - 80px);
 }
