--- a/HomePage.css
+++ b/HomePage.css
@@ -1,6 +1,6 @@
 .navbar{
     overflow: hidden;
-    background-color: #0082e6;
+    background-color: #bda195;
     padding:10px 10px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -27,7 +27,7 @@
 }
 
 .navbar a.active{
-    background-color: dodgerblue;
+    background-color: #856f66;
     color: white;
 }
 
