--- a/HomePage.css
+++ b/HomePage.css
@@ -48,7 +48,7 @@
 }
  
 body{
-    background: url(https://calbizjournal.com/wp-content/uploads/2021/11/startup-1140x691.jpg) no-repeat;
+    background: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/rm346-adj-background-10_2.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=330e80a10a6e465d8c485ecd92b92326) no-repeat;
     background-size: cover;
     height: calc(100vh - 80px);
 }
