--- a/LoginPage.css
+++ b/LoginPage.css
@@ -72,7 +72,7 @@ h2.inactive {
 
 h2.active {
   color: #0d0d0d;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #bda195;
 }
 
 
@@ -80,7 +80,7 @@ h2.active {
 /* FORM TYPOGRAPHY*/
 
 input[type=button], input[type=submit], input[type=reset]  {
-  background-color: #56baed;
+  background-color: #bda195;
   border: none;
   color: white;
   padding: 15px 80px;
@@ -102,7 +102,7 @@ input[type=button], input[type=submit], input[type=reset]  {
 }
 
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
-  background-color: #39ace7;
+  background-color: #856f66;
 }
 
 input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
@@ -136,7 +136,7 @@ input[type=text] {
 
 input[type=text]:focus {
   background-color: #fff;
-  border-bottom: 2px solid #5fbae9;
+  border-bottom: 2px solid #bda195;
 }
 
 input[type=text]:placeholder {
