--- a/Salary.css
+++ b/Salary.css
@@ -53,3 +53,9 @@ body{
     background-size: cover;
     height: calc(100vh - 80px);
 }
+
+.salary{
+    padding: 10px;
+    border: 5px solid orange;
+    border-collapse: separate;
+}
