--- a/Salary.css
+++ b/Salary.css
@@ -60,3 +60,10 @@ body{
     border-collapse: separate;
     background-color: white;
 }
+
+h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 35px;
+    text-align: center;
+    font-weight: bold;
+}
