--- a/Salary.css
+++ b/Salary.css
@@ -67,3 +67,10 @@ h1{
     text-align: center;
     font-weight: bold;
 }
+
+.warning{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    text-align: center;
+}
