--- a/Salary.css
+++ b/Salary.css
@@ -59,8 +59,7 @@ body{
     border: 5px solid orange;
     border-collapse: separate;
     background-color: white;
-    position: absolute;
-    right: 5px;
+    margin: auto;
 }
 
 h1{
