--- a/CPF.css
+++ b/CPF.css
@@ -53,3 +53,37 @@ body{
     background-size: cover;
     height: calc(100vh - 80px);
 }
+
+.container {
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+
+  .borders{
+    padding: 10px;
+    border: 5px solid #baaca2;
+    border-collapse: separate;
+    background-color: #e3d3c8;
+    font-family: Montserrat,sans-serif;
+}
+.border{
+    padding: 10px;
+    height:123px;
+    border: 5px solid #baaca2;
+    border-collapse: separate;
+    background-color: #e3d3c8;
+    font-family: Montserrat,sans-serif;
+}
+
+.data{
+    text-align:center;
+}
+
+.data2{
+    text-align: justify;
+    font-weight: bold;
+    text-transform: uppercase;
+}
