--- a/Employee.css
+++ b/Employee.css
@@ -53,3 +53,24 @@ body{
     background-size: cover;
     height: calc(100vh - 80px);
 }
+
+  /* Add a background color and some padding around the form */
+  .container {
+    border-radius: 7px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    width: 1000px;
+    margin: auto;
+  }
+
+  .data{
+    text-align:left;
+    font-weight: 100;
+    font-size: 100px;
+}
+
+.data2{
+    text-align: justify;
+    font-weight: bold;
+    text-transform: uppercase;
+}
