--- a/Salary.css
+++ b/Salary.css
@@ -58,7 +58,7 @@ body{
     padding: 10px;
     border: 5px solid orange;
     border-collapse: separate;
-    background-color: orange;
+    background-color: rgb(219, 147, 14);
     margin: auto;
     font-family: Montserrat,sans-serif;
 }
