--- a/Salary.css
+++ b/Salary.css
@@ -56,9 +56,9 @@ body{
 
 .salary{
     padding: 10px;
-    border: 5px solid orange;
+    border: 5px solid rgb(219, 147, 14);
     border-collapse: separate;
-    background-color: rgb(219, 147, 14);
+    background-color: orange;
     margin: auto;
     font-family: Montserrat,sans-serif;
 }
