--- a/Salary.css
+++ b/Salary.css
@@ -83,4 +83,7 @@ h1{
     background-color: #856f66;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    border-radius: 4px;
+    color: black;
+    font-size: 18px;
 }
