--- a/Salary.css
+++ b/Salary.css
@@ -69,3 +69,11 @@ h1{
     text-align: center;
 }
 
+.table{
+    padding: 10px;
+    border: 5px solid rgb(219,147,14);
+    border-collapse: separate;
+    background-color: orange;
+    margin: auto;
+    font-family: Montserrat,sans-serif;
+}
