--- a/Salary.css
+++ b/Salary.css
@@ -69,3 +69,11 @@ h1{
     text-align: center;
 }
 
+table{
+    border: 5px solid rgb(219,147,14);
+    padding: 10px;
+    border-collapse:separate;
+    background-color:orange;
+    margin:auto;
+    font-family: Montserrat,sans-serif;
+}
