--- a/Salary.css
+++ b/Salary.css
@@ -82,6 +82,9 @@ table{
     background-color: orange;
     color: white;
     font-family: Montserrat,sans-serif;
-    margin: auto;
+    position: relative;
+    left: 650px;
     padding: 10px;
+    border: 5px solid rgb(219,147,14);
+    border-radius: 5px;
 }
