--- a/Salary.css
+++ b/Salary.css
@@ -74,7 +74,9 @@ table{
     padding: 10px;
     border-collapse:separate;
     background-color:orange;
-    margin:auto;
+    position: relative;
+    top:50px;
+    left:470px;
     font-family: Montserrat,sans-serif;
 }
 
@@ -94,7 +96,7 @@ table{
     color: white;
     font-family: Montserrat,sans-serif;
     position: relative;
-    top:200px;
+    bottom:-20px;
     left: 680px;
     padding: 10px;
     border: 5px solid rgb(219,147,14);
