--- a/CPF.css
+++ b/CPF.css
@@ -87,3 +87,15 @@ body{
     font-weight: bold;
     text-transform: uppercase;
 }
+
+.button{
+    padding: 10px;
+    border: 5px solid #baaca2;
+    border-collapse: separate;
+    background-color: #e3d3c8;
+    font-family: Montserrat,sans-serif;
+    text-align:center;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+  
