--- a/FeedbackPage.css
+++ b/FeedbackPage.css
@@ -32,4 +32,39 @@ input[type=text], select, textarea {
     width: 1000px;
     margin: auto;
   }
-  
+  .container2 {
+    border-radius: 7px;
+    
+    padding: 20px;
+    width: 1000px;
+    margin: auto;
+  }
+
+  .borders{
+    padding: 10px;
+    border: 5px solid #baaca2;
+    border-collapse: separate;
+    background-color: #e3d3c8;
+    font-family: Montserrat,sans-serif;
+    
+  }
+  .data{
+    text-align:justify;
+}
+
+.data2{
+    text-align: justify;
+    font-weight: bold;
+    text-transform: uppercase;
+    width: 150px;
+}
+.button{
+  padding: 10px;
+  border: 5px solid #baaca2;
+  border-collapse: separate;
+  background-color: #e3d3c8;
+  font-family: Montserrat,sans-serif;
+  text-align:center;
+  font-weight: bold;
+  text-transform: uppercase;
+}
