--- a/CPF.css
+++ b/CPF.css
@@ -55,11 +55,18 @@ body{
 }
 
 .container {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    padding-right: 50px;
-    padding-left: 50px;
+    border-radius: 7px;
+    
+    padding: 25px;
+    width: 1000px;
+    margin: auto;
+  }
+  .container2 {
+    border-radius: 7px;
+    background-color: #f2f2f2;
+    padding: 25px;
+    width: 1000px;
+    margin: auto;
   }
 
   .borders{
@@ -98,4 +105,15 @@ body{
     font-weight: bold;
     text-transform: uppercase;
 }
+
+input[type=text], select, textarea {
+    width: 100%; /* Full width */
+    padding: 12px; /* Some padding */ 
+    border: 1px solid #ccc; /* Gray border */
+    border-radius: 4px; /* Rounded borders */
+    box-sizing: border-box; /* Make sure that padding and width stays in place */
+    margin-top: 6px; /* Add a top margin */
+    margin-bottom: 16px; /* Bottom margin */
+    resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  }
   
